--- a/src/RSCG_InterceptMethodCommon/RSCG_InterceptMethodCommon.csproj
+++ b/src/RSCG_InterceptMethodCommon/RSCG_InterceptMethodCommon.csproj
@@ -63,7 +63,7 @@
 		<IncludeSource>true</IncludeSource>
 		<NoWarn>NU5125;NU5039</NoWarn>
 		<!--<Version>8.$([System.DateTime]::Now.ToString(yyyy.1MMdd.1HHss))</Version>-->
-		<Version>$([System.DateTime]::Now.ToString(8.yyyy.1MMdd.1HHmm))</Version>
+		<Version>8.2024.2318.289</Version>
 
 		<!--<Optimize Condition="'$(Configuration)'=='Release'">true</Optimize>-->
 		<RepositoryUrl>https://github.com/ignatandrei/RSCG_InterceptMethod</RepositoryUrl>
